name:                quicksort
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/quicksort#readme>
homepage:            https://github.com/lehins/quicksort
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2019 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Map

  other-modules:       Slow
  build-depends:       array
                     , base            >= 4.8 && < 5
                     , containers
                     , massiv
                     , parallel
                     , primitive
                     , scheduler
                     , vector
                     , vector-algorithms

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  c-sources:           cbits/qsort.c
  cc-options:          -Wall -O2

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Quicksort.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , array
                     , criterion
                     , deepseq
                     , massiv
                     , quicksort
                     , primitive
                     , primitive-sort
                     , random
                     , vector
  default-language:    Haskell2010


test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Common
                    , LibSpec
                    , Spec
  build-depends:      QuickCheck
                    , base             >= 4.8 && < 5
                    , array
                    , hspec
                    , massiv
                    , parallel
                    , quicksort
                    , vector

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N2

-- executable qsort
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , quicksort
--                      , vector
--   default-language:    Haskell2010

--   ghc-options:         -threaded -O2 -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes


source-repository head
  type:     git
  location: https://github.com/lehins/quicksort
